# yukino-dev

./: .rusty-hook.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
cli/: Cargo.toml
cli/src/: entry.rs  lib.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/closure/: context.rs  expr.rs  mod.rs  param.rs
core/src/converter/: basic.rs  constructor.rs  mod.rs  tuple.rs  unit.rs
core/src/db/: ty.rs
core/src/entity/: attr.rs  converter.rs  def.rs  entity.rs  mod.rs
core/src/err/: base.rs  convert.rs  err.rs  exec.rs  mapping.rs  mod.rs  query.rs  resolve.rs  view.rs
core/src/expr/: computation.rs  mod.rs  node.rs  ops.rs  option.rs  value.rs
core/src/interface/: attr.rs  converter.rs  def.rs  entity.rs  mod.rs
core/src/operator/: aggr_func.rs  boolean.rs  mod.rs  numeric.rs  order.rs  subquery.rs  tuple.rs
core/src/query/: alias.rs  assoc.rs  builder.rs  calc.rs  column.rs  computation.rs  delete.rs  exec.rs  expr.rs  field.rs  filter.rs  fold.rs  function.rs  group.rs  ident.rs  insert.rs  list.rs  map.rs  mod.rs  optimizer.rs  path.rs  query.rs  result.rs  select.rs  shorten.rs  sort.rs  update.rs  view.rs  visitor.rs
core/src/query_result/: alias.rs  exec.rs  filter.rs  fold.rs  group.rs  map.rs  sort.rs  visitor.rs
core/src/resolver/: entity.rs  entry.rs  field.rs  mod.rs  path.rs
core/src/resolver/entity_resolver_pass/: converter_pass.rs  entity_impl_pass.rs  entity_struct_pass.rs  entity_view_impl_pass.rs  field_marker_pass.rs  mod.rs
core/src/resolver/field_resolve_cells/: basic.rs  numeric.rs
core/src/schema/: entity.rs  entry.rs  field.rs  mod.rs  path.rs
core/src/schema/entity_resolver_pass/: converter_pass.rs  entity_impl_pass.rs  entity_struct_pass.rs  entity_view_impl_pass.rs  field_marker_pass.rs
core/src/schema/field_resolve_cells/: basic.rs
core/src/view/: aggregate.rs  basic.rs  boolean.rs  computation.rs  constructor.rs  entity.rs  expr.rs  group_by.rs  index.rs  mod.rs  node.rs  numeric.rs  ops.rs  resolver.rs  sort.rs  subquery.rs  tag.rs  tuple.rs  unit.rs  value.rs  vertical.rs
derive/: Cargo.toml
derive/src/: entity.rs  lib.rs  resolved.rs
derive/src/fields/: basic.rs  datetime.rs  decimal.rs  mod.rs
derive/src/impls/: association.rs  converter.rs  entity.rs  insert.rs  marker.rs  mod.rs  primary.rs  view.rs
interface/: Cargo.toml
interface/src/: attr.rs  def.rs  entity.rs  lib.rs  ty.rs
macro/: Cargo.toml
query-builder/: Cargo.toml
query-builder/src/: delete.rs  err.rs  expr.rs  function.rs  ident.rs  insert.rs  join.rs  lib.rs  query.rs  select.rs  update.rs  value.rs
query-builder/src/backend/: mod.rs  state.rs  to_sql.rs
query-builder/src/drivers/: mod.rs  mysql.rs
src/: lib.rs
tests/: Cargo.toml
tests/benches/: meeting.rs
tests/entity/: foo.rs
tests/examples/: meeting.rs  schema.sql
tests/src/: bar.rs  cli.rs  foo.rs  lib.rs  meeting.rs  schema.rs
tests/tests/: association.rs  basic_ty.rs  delete.rs  insert.rs  primary_key.rs  query.rs  simple_query.rs  update.rs
yukino-bench/: Cargo.toml  schema.sql
yukino-bench/benches/: benches.rs
yukino-bench/examples/: diesel.rs  sqlx.rs  yukino.rs
yukino-bench/src/: diesel_benches.rs  interface.rs  lib.rs  sqlx_benches.rs  yukino_benches.rs
yukino-bench/src/sea_orm_benches/: examination.rs  mod.rs  user.rs
