[package]
name = "yukino"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { package = "yukino-interface", path = "./interface", version = "0.1.0" }
core = { package = "yukino-core", path = "./core", version = "0.1.0" }
cli = { package = "yukino-cli", path = "./cli", version = "0.1.0" }
query_builder = { package = "yukino-query-builder", path = "./query-builder", version = "0.1.0" }
generic-array = "0.14.4"
lazy_static = "1.4.0"

[workspace]
members = [
    "query-builder",
    "core",
    "cli",
    "tests",
    "interface"
]
