[package]
name = "yukino-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { package = "yukino-interface", path = "../interface", version = "0.1.0" }
query-builder = { package = "yukino-query-builder", path = "../query-builder", version = "0.1.0" }
heck = "0.3.3"
proc-macro2 = { version = "1.0", features= ["span-locations"] }
thiserror = "1.0"
generic-array = "0.14.4"
rand = "0.8.4"
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "json", "time", "decimal"]}
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.52"
futures = "0.3"

[features]
default = [ "mysql" ]
mysql = [ "sqlx/mysql" ]
pgsql = [ "sqlx/postgres" ]
sqlite = [ "sqlx/sqlite" ]