[package]
name = "yukino-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
heck = "0.3.3"
syn = { version = "1.0", features= ["full"] }
proc-macro2 = "1.0"
interface = { package = "yukino-interface", path = "../interface", version = "0.1.0" }

[lib]
proc-macro = true
