[package]
name = "yukino-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotation-rs = "0.1.0"
iroha = "0.1.7"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"

[features]
default = ["mysql", "json", "data-time"]
mysql = []
postgre-sql = []
sqlite = []
json = []
data-time = []
