[package]
name = "yukino-interface"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote-data = "1.0.0"
quote = "1.0"
proc-macro2 = "1.0"

[features]
default = ["mysql", "json", "data-time"]
mysql = []
postgre-sql = []
sqlite = []
json = []
data-time = []
