[package]
name = "yukino-query-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { package = "yukino-interface", path = "../interface", version = "0.1.0" }
iroha = "0.1.7"
quote = "1.0"
proc-macro2 = "1.0"
time = { version = "0.3.5", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["mysql", "json", "data-time"]
mysql = []
postgre-sql = []
sqlite = []
json = ["serde_json", "serde"]
data-time = ["time"]
