[package]
name = "yukino-query-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { package = "yukino-interface", path = "../interface", version = "0.1.0" }
iroha = "0.1.7"
quote = "1.0"
proc-macro2 = "1.0"
time = { version = "0.3.5" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
sqlx = { version = "0.5.9", features = ["runtime-async-std-native-tls", "json", "time"]}
thiserror = "1.0"
generic-array = "0.14.4"

[features]
default = ["mysql"]
mysql = [ "sqlx/mysql" ]
pgsql = [ "sqlx/postgres" ]
sqlite = [ "sqlx/sqlite" ]
