[package]
name = "yukino-query-builder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { package = "yukino-interface", path = "../interface", version = "0.1.0" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "json", "time", "decimal"]}
thiserror = "1.0"

[features]
default = [ "mysql" ]
mysql = [ "sqlx/mysql" ]
pgsql = [ "sqlx/postgres" ]
sqlite = [ "sqlx/sqlite" ]
