[package]
name = "yukino-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yukino = { path = "./..", version = "0.1.0" }
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "json", "time", "mysql", "decimal"]}
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
name = "meeting"
harness = false





