[package]
name = "yukino-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yukino = { path = "./..", version = "0.1.0" }
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "json", "time", "mysql", "decimal"]}
tokio = { version = "1", features = ["full"] }
diesel = { version = "1.4.8", features = ["mysql", "chrono"] }
sea-orm = {version = "0.5", features = ["runtime-tokio-rustls", "sqlx-mysql"]}
chrono = "0.4.19"
dotenv = "0.15.0"
criterion = { version = "0.3.5", features = ["async_tokio"] }
rand = "0.8.4"
futures = "0.3"

[[bench]]
name = "benches"
bench = true
harness = false